namespace VRShooting.Scripts.Enemy.Interfaces
{
    public interface IEnemyObject
    {
        public void SpawnInitialize();
    }
}

